src/styles.css
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css?family=Roboto');

html {
    overflow-y: scroll;
    overflow-x: hidden;
}

body, .image-background {
    /* Set font family */
    font-family: 'Roboto', sans-serif;

    background-image: url("/assets/tile.jpg");
    background-repeat: repeat;
    background-attachment: fixed;
    
    /*
    background-image: url("/assets/background.jpg");
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    */
}

.loading-spinner {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

body {
    overflow-x: hidden;
}

::-webkit-scrollbar {
    width: 3px;
}

::-webkit-scrollbar-thumb {
    background-color:black;
}

.sub-card {
    max-width: 428px;
    height:40px;
    margin: 0 auto;
    cursor: pointer;
}

.multi-line-text {
    white-space: pre-line;
}

.theme-header {
    width: 100%;
    background-color: #009688;
    margin-bottom: 10px;
}

.primary-background-color{
    background-color: #009688;
    color: white;
}

.full-width {
    width: 100%;
}

.detail-card {
    width: 100%;
    margin: auto;
    max-width: 428px;
    background-color: white;
}

.img-circle {
    border-radius: 50%;
}

.grey-text-on-white {
    color: #777;
}

.markdown a {
    color: rgb(10, 180, 206);
    text-decoration: none;
}

.markdown a:hover {
    color: blue;
}

